# KokoroTTSGenerator

./: .gitmodules  KokoroTTSGenerator.spec  README.md  app.py  build.sh  build_linux.sh  build_windows.bat  build_windows.py  pyproject.toml  requirements.txt  run.sh
.zed/: keymap.json  tasks.json
How to run guides/: Linux how to run.txt  Macos how to run.txt  Windows how to run.txt
final_audio/: placeholder.txt
src/: gui.py  tts.py
temp/: placeholder.txt
