[project]
name = "KokoroTTS"
version = "0.1.0"
description = "A high-quality local text-to-speech generator."
authors = [{ name = "WilleIshere" }]
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "kokoro>=0.9.4",
    "nicegui>=2.20.0",
    "pyinstaller>=6.14.1",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "pip>=25.1.1",
]

[project.optional-dependencies]
dev = ["ruff", "black", "pytest"]
